--- a/package.json
+++ b/package.json
@@ -10,14 +10,26 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@inertiajs/inertia": "^0.8.2",
+        "@inertiajs/inertia-vue": "^0.5.4",
+        "@tailwindcss/forms": "^0.2.1",
+        "@tailwindcss/typography": "^0.3.0",
+        "autoprefixer": "^10.0.2",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "portal-vue": "^2.1.7",
         "postcss": "^8.1.14",
-        "vue-loader": "^15.9.5",
-        "vue-template-compiler": "^2.6.12"
+        "postcss-import": "^12.0.1",
+        "tailwindcss": "^2.0.1",
+        "vue": "^2.5.17",
+        "vue-loader": "^15.9.6",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.34",
+        "@fortawesome/free-solid-svg-icons": "^5.15.2",
+        "@fortawesome/vue-fontawesome": "^2.0.2",
         "vue": "^2.6.12"
     }
 }
