--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@tailwindcss/typography": "^0.3.0",
         "autoprefixer": "^10.0.2",
         "axios": "^0.21",
+        "dotenv": "^8.2.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "portal-vue": "^2.1.7",
@@ -30,6 +31,8 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.34",
         "@fortawesome/free-solid-svg-icons": "^5.15.2",
         "@fortawesome/vue-fontawesome": "^2.0.2",
+        "laravel-echo": "^1.10.0",
+        "pusher-js": "^7.0.2",
         "vue": "^2.6.12"
     }
 }
